# go2_local_brain

./: .env.example  .env.jetson.example  .gitignore  README.md  bootstrap.sh  pyproject.toml
docs/: AMERICAN_MODEL_EVAL.md  ai_autonomy.md  browser_modes.md  code_walkthrough.md  current_cockpits.md  faces_workflows_targeting.md  how_it_works.md  jetson_networking.md  jetson_orin_deploy.md  live_viewer.md  module_reference.md  unified_gui.md
maps/: home.json
scripts/: deploy_patrol_to_jetson.sh  diagnose_webrtc.sh  enroll_face.py  eval_model_tools.py  go2.sh  gun_command_manual.sh  gun_fire_manual.sh  gun_session_manual.expect  gun_session_manual.sh  gun_stop_manual.sh  gun_test_manual.sh  gun_tunnel_manual.sh  install_jetson_service.sh  jetson_doctor.sh  jetson_perf.sh  recover_dog_webrtc_wifi.sh  recover_dog_webrtc_wifi_over_ssh.sh  reset_dog_sta_runtime.sh  reset_dog_sta_runtime_over_ssh.sh  rollback_dog_cockpit_forward.sh  rollback_dog_jetson_route.sh  rollback_jetson_eth_static.sh  run_ai_cockpit.sh  run_ai_demo.sh  run_controller_cockpit.sh  run_jetson_cockpit.sh  run_lidar_viewer.sh  run_local_cockpit.sh  run_sim_cockpit.sh  run_wasd_lidar.sh  run_webcam_cockpit.ps1  setup_dog_cockpit_forward.sh  setup_dog_jetson_1042_subnet.sh  setup_dog_jetson_1042_subnet_over_ssh.sh  setup_dog_jetson_route.sh  setup_jetson_eth_static.sh  setup_local_vision.sh  setup_windows_faceid.ps1  smoke_test_imports.py  webcam_faceid_test.py
tests/: test_auth.py  test_autonomy.py  test_behavior.py  test_brain.py  test_control_modes.py  test_controller_cockpit.py  test_driver.py  (+9 more)
(+66 files in other folders)
