[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "go2-local-brain"
version = "0.1.0"
description = "Lightweight local brain for a Unitree Go2 Air: WebRTC control + Ollama tool-calling."
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "unitree_webrtc_connect",
    "ollama",
    "rerun-sdk",
    "python-dotenv",
    "aiohttp",
    "pillow",
]

[project.optional-dependencies]
vision = [
    "ultralytics",
    "opencv-python-headless",
]
webcam = [
    "opencv-python",
]
audio = [
    "sounddevice",
    "numpy",
]
# Face recognition. Pick one backend; insightface is the Jetson-GPU path.
faces = [
    "insightface",
    "onnxruntime",
]
faces-dlib = [
    "face_recognition",
]
# Arduino-driven Nerf launcher trigger over serial.
nerf = [
    "pyserial",
]

[tool.setuptools.packages.find]
where = ["src"]
